docs-archive/apache-airflow-providers-keycloak/0.0.1/_sources/_api/airflow/providers/keycloak/auth_manager/cli/commands/index.rst.txt
airflow.providers.keycloak.auth_manager.cli.commands
====================================================

.. py:module:: airflow.providers.keycloak.auth_manager.cli.commands


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.cli.commands.log


Functions
---------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.cli.commands.create_scopes_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_resources_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_permissions_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_all_command


Module Contents
---------------

.. py:data:: log

.. py:function:: create_scopes_command(args)

   Create Keycloak auth manager scopes in Keycloak.


.. py:function:: create_resources_command(args)

   Create Keycloak auth manager resources in Keycloak.


.. py:function:: create_permissions_command(args)

   Create Keycloak auth manager permissions in Keycloak.


.. py:function:: create_all_command(args)

   Create all Keycloak auth manager entities in Keycloak.


