docs-archive/apache-airflow-providers-keycloak/0.10.0/_sources/_api/airflow/providers/keycloak/auth_manager/cli/commands/index.rst.txt
airflow.providers.keycloak.auth_manager.cli.commands
====================================================

.. py:module:: airflow.providers.keycloak.auth_manager.cli.commands


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.cli.commands.log
   airflow.providers.keycloak.auth_manager.cli.commands.TEAM_SCOPED_RESOURCE_NAMES
   airflow.providers.keycloak.auth_manager.cli.commands.GLOBAL_SCOPED_RESOURCE_NAMES
   airflow.providers.keycloak.auth_manager.cli.commands.TEAM_MENU_ITEMS
   airflow.providers.keycloak.auth_manager.cli.commands.TEAM_ADMIN_MENU_ITEMS
   airflow.providers.keycloak.auth_manager.cli.commands.TEAM_ROLE_NAMES
   airflow.providers.keycloak.auth_manager.cli.commands.SUPER_ADMIN_ROLE_NAME


Functions
---------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.cli.commands.create_scopes_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_resources_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_permissions_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_all_command
   airflow.providers.keycloak.auth_manager.cli.commands.create_team_command
   airflow.providers.keycloak.auth_manager.cli.commands.add_user_to_team_command


Module Contents
---------------

.. py:data:: log

.. py:data:: TEAM_SCOPED_RESOURCE_NAMES

.. py:data:: GLOBAL_SCOPED_RESOURCE_NAMES

.. py:data:: TEAM_MENU_ITEMS

.. py:data:: TEAM_ADMIN_MENU_ITEMS

.. py:data:: TEAM_ROLE_NAMES
   :value: ('Viewer', 'User', 'Op', 'Admin')


.. py:data:: SUPER_ADMIN_ROLE_NAME
   :value: 'SuperAdmin'


.. py:function:: create_scopes_command(args)

   Create Keycloak auth manager scopes in Keycloak.


.. py:function:: create_resources_command(args)

   Create Keycloak auth manager resources in Keycloak.


.. py:function:: create_permissions_command(args)

   Create Keycloak auth manager permissions in Keycloak.


.. py:function:: create_all_command(args)

   Create all Keycloak auth manager entities in Keycloak.


.. py:function:: create_team_command(args)

   Create team resources, permissions, and Keycloak group.


.. py:function:: add_user_to_team_command(args)

   Add a user to a Keycloak team group.


